# Birdbrain-

./: .gitignore  CMakeLists.txt  README.md  helper.cmake  main.cpp
Testing/: TAG
Testing/20250310-0349/: Test.xml
engine/: main.cpp
engine/debugging/: DEBUG.hpp  DebugConsts.hpp
engine/include/: DEBUG.hpp  DebugConsts.hpp
engine/include/ecs/: ComponentPool.hpp  ComponentReader.hpp  ComponentReaderBase.hpp  ECSConsts.hpp  Scene.hpp  SceneView.hpp
engine/include/ecs/components/: CircleCollider.hpp  CircleRenderer.hpp  Rigidbody.hpp
engine/include/input/: Input.hpp  InputCycle.hpp
engine/include/math/: Color.hpp  DetMath.hpp  DetMathInt.hpp  FixedPoint.hpp  MathConsts.hpp  README.md  Vector2i.hpp  Vector3i.hpp
engine/include/rendering/: IWindow.hpp
engine/include/rendering/SDL/: SdlWindow.hpp
engine/include/rendering/SFML/: SfmlRenderWindow.hpp
engine/input/: Input.hpp  InputCycle.cpp
engine/math/: Vector2i.hpp  Vector3i.hpp
engine/src/: SceneManager.cpp  TimeManager.cpp
engine/src/ecs/: ComponentPool.cpp  ECSConsts.cpp
engine/src/ecs/components/: CircleCollider.cpp  CircleRenderer.cpp  Rigidbody.cpp
engine/src/math/: DetMath.cpp
engine/src/rendering/: Color.cpp  IWindow.cpp
engine/src/rendering/SDL/: SdlWindow.cpp
engine/src/rendering/SFML/: SfmlRenderWindow.cpp
include/: SceneManager.hpp
include/ecs/: ComponentPool.hpp  ComponentReader.hpp  ComponentReaderBase.hpp  Scene.hpp  SceneView.hpp
include/ecs/components/: CircleCollider.hpp  CircleRenderer.hpp  Rigidbody.hpp  TransformComponent.hpp
include/math/: DetMath.hpp  Vector2i.hpp
include/rendering/: IRenderWindow.hpp
include/rendering/SFML/: SfmlRenderWindow.hpp
src/ecs/: ComponentPool.cpp  ComponentReaderBase.cpp  Scene.cpp
src/ecs/components/: CircleCollider.cpp  CircleRenderer.cpp  Rigidbody.cpp
src/rendering/SFML/: SfmlRenderWindow.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/math/: DetMathIntTests.cpp  DetMathTests.cpp  FixedPointTests.cpp  Vector2iTests.cpp
